Testing - fix for milestone scroller and min-width on mobile logo

--- a/web/themes/custom/hm-public-theme/static/sass/base/_header.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/base/_header.scss
@@ -170,6 +170,7 @@
 
   @media all and (max-width: 950px) {
     align-items: flex-start;
+    min-width: 200px;
 
     .header__logo {
       margin-left: 0;
